feat: update TidyMac to version 0.2.0 with GUI support
- Changed the project description to reflect GUI functionality.
- Replaced CLI implementation with a GUI using eframe.
- Added error handling for permission issues when accessing the trash.
- Updated the Cleaner trait to require Send for thread safety.
- Removed the cli module and its associated code.
- Consolidated output formatting functions into utils.
- Introduced a new app module to manage the GUI state and interactions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "tidymac"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
-description = "A macOS cleanup CLI tool"
+description = "A macOS cleanup GUI tool"
 
 [dependencies]
-clap = { version = "4.5", features = ["derive"] }
-colored = "3"
+eframe = "0.31"
 walkdir = "2"
 dirs = "6"
